[tool.poetry]
name = "beep-booper"
version = "0.1.0"
description = ""
authors = ["PerpetualPossum <140846346+PerpetualPossum@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
isort = "^5.13.2"
discord-py = {version = "^2.3.2", extras = ["voice"]}
black = "^24.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
